0032976: Visualization - AIS_InteractiveContext::FitSelected() includes objects invisible in current View